--- a/style.css
+++ b/style.css
@@ -48,8 +48,11 @@ body * {
 }
 
 #container {
-  //border: 1px solid white; 
-  width: 360px;
+   //border: 1px solid white; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
   margin: 45px auto;
 }
 
@@ -58,12 +61,12 @@ body * {
   //border: 1px solid green;
   width: 360px;
   height: 192px;
-  display: flex;
+  padding: 24px;
+  align: auto;
   align-items: center;
   justify-content: center;
+  display: flex;
   flex-direction: column;
-  padding: 24px;
-
 }
 
 .profile img {
@@ -71,6 +74,7 @@ body * {
   height: 112px;
   border-radius: 60px;
   border: 1px solid var(--border-imagecolor);
+  
 }
 
 .profile a {
