--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
+  height: 100vh;
   
   
   /*É possível usar uma forma "resumida" chamada - Shorthands
@@ -107,11 +108,15 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+  animation: slide-back .2s;
+}
+
+.switch button:hover {
+  outline: 8px solid var(--highlight-color)
 }
 
 .light .switch button {
-  right: 0;
-  left: initial;
+  animation: slide-go 0.4s forwards;
 }
 
 .switch span {
@@ -199,5 +204,35 @@ footer.page-creator {
 
 footer.page-creator a:hover {
  color: rgba(255, 255, 255, 0.5);
+}
+
+/*-----MEDIA QUERIES-----*/
+@media (min-width: 700px){
+  :root {
+    --bg-url: url('./assets/images/bg-desktop.jpg');
+  }
+
+  .light {
+    --bg-url: url('./assets/images/bg-desktop-light.jpg')
+  }
+}
+
+/*-----ANIMATION-----*/
+@keyframes slide-go {
+  from {
+    left:0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+ from {
+  left: 50%;
+ }
+ to {
+  left: 0;
+ }
 }
 
